added riyadh_data.txt and updated index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"> 
-    <title>Hello World</title>
+    <title>Jon's 11.S947 Website</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>I wuz here.</p>
-    <p>This is a new github website for 11.S947</p>
+    <h1>Jon Campbell's Website for 11.S947</h1>
+    <p>This website will feature data analysis and visualization projects completed for the class 11.S947 - Big Data, Visualization and Society. Over the semester, datasets and visualizations will be posted here for viewing and/or download.</p>
+    <h2>Problem Set 0 - Intro to Github//Python//Anaconda</h2>
+    <p>This first dataset is of population in Riyadh, Saudi Arabia by TAZ (Transportation Analysis Zones). Population for each TAZ is broken down by Saudi and non-Saudi population. This dataset is a CSV table. Click <a href="jacampbe.github.io/riyadh_data.txt" class="link" id="link1">here</a> for the Riyadh TAZ dataset.</p>
+    
 </body>
 </html>
